fixtures/benchmark/negatives/n04.ts
function modelLabel() { return "claude-sonnet-4-20250514"; }
